// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lamda.rb - ruby-verify: lamda.rb 1`] = `
l = ->(x, y) { something(x, y) }
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
l = ->(x, y) { something(x, y) }

`;

exports[`lamda_2.rb - ruby-verify: lamda_2.rb 1`] = `
l = -> { something }
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
l = -> { something }

`;
